<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Curved White Content Area -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/black"
            android:padding="16dp">

            <!-- Title -->
            <TextView
                android:id="@+id/pageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/volkhov_bold_italic"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="35sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-66dp"
            android:background="@drawable/curved_content_background"
            android:orientation="vertical"
            android:padding="30dp"> <!-- This overlaps the black bar to create a curved effect -->


            <!-- Events1 -->
            <LinearLayout
                android:id="@+id/event1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:background="@drawable/event_block_background"
                android:orientation="horizontal"
                android:padding="12dp"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/events"
                    android:scaleType="centerInside"
                    android:src="@drawable/calendar_check_regular" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:clickable="true"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="CLEANUP DRIVE"
                        android:textColor="@color/black"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Date: 10 April 2025"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Time: 7AM - 10AM"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/venue_terna_auditorium_nerul_west"-->
<!--                        android:textColor="@color/black"-->
<!--                        android:textSize="20sp" />-->
                </LinearLayout>
            </LinearLayout>

            <!--event2-->
            <LinearLayout
                android:id="@+id/event2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:background="@drawable/event_block_background"
                android:orientation="horizontal"
                android:padding="12dp"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/events"
                    android:scaleType="centerInside"
                    android:src="@drawable/calendar_check_regular" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tree_plantation"
                        android:textColor="@color/black"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Date: 29 April 2025"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Time: 10AM - 12AM"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </LinearLayout>
            </LinearLayout>

            <!--event3-->
            <LinearLayout
                android:id="@+id/event3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:background="@drawable/event_block_background"
                android:orientation="horizontal"
                android:padding="12dp"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/events"
                    android:scaleType="centerInside"
                    android:src="@drawable/calendar_check_regular" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="COLLEGE EVENT"
                        android:textColor="@color/black"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Date: 15 April 2025"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Time: 12pm - 3pm"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <!--event4-->
            <LinearLayout
                android:id="@+id/event4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:background="@drawable/event_block_background"
                android:orientation="horizontal"
                android:padding="12dp"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/events"
                    android:scaleType="centerInside"
                    android:src="@drawable/calendar_check_regular" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="HEALTH CARE"
                        android:textColor="@color/black"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Date: 27 April 2025"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Time: 12pm - 5pm"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>






        </LinearLayout>

    </LinearLayout>
</ScrollView>
